<resources>
    <string name="app_name">HCP</string>
    <string name="start_time">起始时间:</string>
    <string name="end_time">结束时间:</string>
    <string-array name="lot_control">
        <item>完全控制</item>
        <item>不控制</item>
    </string-array>
    <string name="request_error_authority">交易锁定，请稍候再试，或仅进行查询操作!</string>
    <string name="winp_entity_name">工&#160;&#160;单&#160;&#160;号:</string>
    <string name="component_code">组件编号:</string>
    <string name="login_user">账户:</string>
    <string name="login_password">密码:</string>
    <string name="login_login">登录</string>
    <string name="login_settings">设置</string>
    <string name="login_error_on_empty_field">用户名或密码不得为空!</string>
    <string name="login_error_on_check">用户名密码验证失败!</string>
    <string name="login_error_on_get_login_user">获取登录用户失败!</string>
    <string name="login_on_progress">登录中,请稍候&#8230;</string>
    <string name="func_choose_title">功&#160;能&#160;选&#160;择</string>
    <string name="func_choose_wip_entity">交易</string>
    <string name="func_choose_query">查询</string>
    <string name="func_choose_intraware">内协</string>
    <string name="func_choose_stock_taking">盘点</string>
    <string name="main_title">工&#160;单&#160;操&#160;作</string>
    <string name="main_material_transfer">工单移料</string>
    <string name="main_material_issue">工单领料</string>
    <string name="main_material_return">工单退料</string>
    <string name="main_finish">工单完工</string>
    <string name="main_working_procedure_transfer">工序移动</string>
    <string name="query_menu_title">工&#160;单&#160;查&#160;询</string>
    <string name="main_component_query">组件查询</string>
    <string name="main_standing_corp_query">现有量查询</string>
    <string name="main_wo_query">工单查询</string>
    <string name="main_component_backup_query">备料查询</string>
    <string name="main_wip_transaction_query">交易查询</string>
    <string name="main_operation_query">工序查询</string>
    <string name="intraware_menu_title">内&#160;&#160;协</string>
    <string name="intraware_group_change">组织切换</string>
    <string name="intraware_in">账户别名交易(杂入)</string>
    <string name="intraware_out">账户别名交易(杂出)</string>
    <string name="intraware_issue">生产领料</string>
    <string name="intraware_return">生产退料</string>
    <string name="intraware_move">项目转移</string>
    <string name="intraware_aar">采购接收</string>
    <string name="intraware_compare">工单对照关系</string>
    <string name="stock_taking_menu_title">盘&#160;&#160;点</string>
    <string name="stock_taking_import">盘点差异导入</string>
    <string name="stock_taking_compare">对比盘点结果</string>
    <string name="stock_taking_entering">录入盘点卡</string>
    <string name="stock_taking_modify">修改盘点卡</string>
    <string name="stock_taking_snapshot">取得盘点快照</string>
    <string name="stock_taking_pallet">栈板标签</string>
    <string name="entering_title">录&#160;入&#160;盘&#160;点&#160;卡</string>
    <string name="entering_barcode">条&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码:</string>
    <string name="entering_project_no">项&#160;&#160;目&#160;&#160;号:</string>
    <string name="entering_lot_no">批&#160;&#160;次&#160;&#160;号:</string>
    <string name="entering_item_no">料件编号:</string>
    <string name="entering_item_name">料件名称:</string>
    <string name="entering_item_uom">单&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;位:</string>
    <string name="entering_item_desc">料件型号:</string>
    <string name="entering_quantity">数&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;量:</string>
    <string name="entering_subinventory">子&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;库:</string>
    <string name="entering_locator">货&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;位:</string>
    <string name="modify_title">修&#160;改</string>
    <string name="inventory_compare_title">对&#160;比&#160;盘&#160;点&#160;结&#160;果</string>
    <string name="inventory_compare_subinventory">子&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;库:</string>
    <string name="inventory_compare_item_no">料件编号:</string>
    <string name="inventory_compare_project_no">项&#160;&#160;目&#160;&#160;号:</string>
    <string name="inventory_compare_lot_no">批&#160;&#160;次&#160;&#160;号:</string>
    <string name="inventory_compare_locator">货&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;位:</string>
    <string-array name="operations">
        <item>工单移料</item>
        <item>工单完工</item>
        <item>工单领料</item>
        <item>完工退回</item>
        <item>工单退料</item>
        <item>工序移动</item>
        <item>子库转移</item>
        <item>子库转移退料</item>
        <item>条码子库转移</item>
        <item>虚拟完工</item>
        <item>批量领料</item>
        <item>批量退料</item>
        <item>特定组件发料</item>
    </string-array>
    <string name="settings_title">应用设置</string>
    <string name="settings_ip">服务器&#160;IP:</string>
    <string name="settings_port">端口号:</string>
    <string name="settings_printer_ip">打印机&#160;IP:</string>
    <string name="settings_printer_port">打印机端口:</string>
    <string name="settings_print_enable">开启打印功能</string>
    <string name="authority_title">权限管理</string>
    <string name="authority_user">用户名:</string>
    <string name="authority_add">添加</string>
    <string name="sia_title">子库管理</string>
    <string name="sia_user">用户名:</string>
    <string name="sia_add">添加</string>
    <string name="mt_title">工&#160;单&#160;移&#160;料</string>
    <string name="mt_original">原始工单</string>
    <string name="mt_charging">投料工单</string>
    <string name="mt_sub_inventory">子&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;库:</string>
    <string name="mt_ori_code">原工单号:</string>
    <string name="mt_ori_code_charging">工&#160;&#160;单&#160;&#160;号:</string>
    <string name="mt_component_code">组件编号:</string>
    <string name="mt_component_name">组件名称:</string>
    <string name="mt_provide_qty">已发数量:</string>
    <string name="mt_movable_qty">可移数量:</string>
    <string name="mt_component_qty">组件数量:</string>
    <string name="mt_moved_qty">移动数量:</string>
    <string name="mt_submit">提交</string>
    <string name="mi_title">工&#160;单&#160;领&#160;料</string>
    <string name="mi_ori_wo">工单</string>
    <string name="mi_sub_inventory">子&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;库:</string>
    <string name="mi_ori_code">工&#160;&#160;单&#160;&#160;号:</string>
    <string name="mi_class_code">工单类型:</string>
    <string name="mi_start_time">开始时间:</string>
    <string name="mi_complete_time">完成时间:</string>
    <string name="mi_component_code">组件编号:</string>
    <string name="mi_component_name">组件名称:</string>
    <string name="mi_received_qty">已发数量:</string>
    <string name="mi_unreceived_qty">未发数量:</string>
    <string name="mi_issued_type">供应方式:</string>
    <string name="mi_warehouse_location">仓库货位:</string>
    <string name="mi_standing_crop">现有数量:</string>
    <string name="mi_issued_qty">发料数量:</string>
    <string name="mi_issued_lot">批次:</string>
    <string name="mi_issued_lot_qty">数量:</string>
    <string name="mr_title">工&#160;单&#160;退&#160;料</string>
    <string name="mr_ori_wo">工单</string>
    <string name="mr_subinventory">子&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;库:</string>
    <string name="mr_ori_code">工&#160;&#160;单&#160;&#160;号:</string>
    <string name="mr_class_code">工单类型:</string>
    <string name="mr_start_time">开始时间:</string>
    <string name="mr_complete_time">完成时间:</string>
    <string name="mr_component_code">组件编号:</string>
    <string name="mr_component_name">组件名称:</string>
    <string name="mr_issued_qty">已发数量:</string>
    <string name="mr_unissued_qty">未发数量:</string>
    <string name="mr_issued_type">供应方式:</string>
    <string name="mr_return_qty">退料数量:</string>
    <string name="comp_title">工&#160;单&#160;完&#160;工</string>
    <string name="comp_ori_wo">工单</string>
    <string name="comp_sub_inventory">子&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;库:</string>
    <string name="comp_ori_code">工&#160;&#160;单&#160;&#160;号:</string>
    <string name="comp_class_code">工单类型:</string>
    <string name="comp_start_time">开始时间:</string>
    <string name="comp_completion_time">完成时间:</string>
    <string name="comp_assembly">制品号码:</string>
    <string name="comp_assembly_name">制品名称:</string>
    <string name="comp_completed_qty">已&#160;&#160;完&#160;&#160;工:</string>
    <string name="comp_rest_qty">剩余数量:</string>
    <string name="comp_remark">工单备注:</string>
    <string name="comp_board_code">机台号码:</string>
    <string name="comp_warehouse_location">仓库货位:</string>
    <string name="comp_completion_qty">完工数量:</string>
    <string name="comp_return_title">完&#160;工&#160;退&#160;料</string>
    <string name="comp_return_ori_wo">工单</string>
    <string name="comp_return_sub_inventory">子&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;库:</string>
    <string name="comp_return_ori_code">工&#160;&#160;单&#160;&#160;号:</string>
    <string name="comp_return_class_code">工单类型:</string>
    <string name="comp_return_start_time">开始时间:</string>
    <string name="comp_return_completion_time">完成时间:</string>
    <string name="comp_return_assembly">制品号码:</string>
    <string name="comp_return_assembly_name">制品名称:</string>
    <string name="comp_return_completed_qty">已&#160;&#160;完&#160;&#160;工:</string>
    <string name="comp_return_rest_qty">剩余数量:</string>
    <string name="comp_return_remaining">现&#160;&#160;有&#160;&#160;量:</string>
    <string name="comp_return_remark">工单备注:</string>
    <string name="comp_return_board_code">机台号码:</string>
    <string name="comp_return_warehouse_location">仓库货位:</string>
    <string name="comp_return_transcation_qty">退回数量:</string>
    <string name="wpt_title">工&#160;序&#160;移&#160;动</string>
    <string name="wpt_wo">工单</string>
    <string name="wpt_ori_wo">工&#160;&#160;单&#160;&#160;号:</string>
    <string name="wpt_class_code">工单类型:</string>
    <string name="wpt_start_time">开始时间:</string>
    <string name="wpt_end_time">完成时间:</string>
    <string name="intraware_aar_date">交易日期:</string>
    <string name="intraware_aar_trans_type">交易类型:</string>
    <string name="intraware_aar_ori_type">来源类型:</string>
    <string name="intraware_aar_trans_ori">交易来源:</string>
    <string name="intraware_aar_reason">原&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;因:</string>
    <string name="isp_wip_issue_subinventory_select_title">子库选择</string>
    <string name="isp_wip_issue_subinventory_select_component">组件</string>
    <string name="isp_wip_issue_subinventory_select_component_description">组件描述</string>
    <string name="isp_wip_issue_subinventory_select_uom">单位</string>
    <string name="isp_wip_issue_subinventory_select_subinventory">子库存</string>
    <string name="isp_wip_issue_subinventory_select_locator">货位</string>
    <string name="isp_wip_issue_subinventory_select_lotno">批次号</string>
    <string name="isp_wip_issue_subinventory_select_transaction_quantity">可用数量</string>
    <string name="isp_wip_issue_subinventory_select_confirm">确定</string>
    <string name="isp_wip_issue_subinventory_select_query">查询</string>
    <string name="isp_subinventory_transfer_locator_select_title">货位选择</string>
    <string name="isp_subinventory_transfer_locator_select_name">货位</string>
    <string name="isp_subinventory_transfer_locator_select_description">货位描述</string>
    <string name="isp_subinventory_transfer_locator_select_confirm">确定</string>
    <string name="isp_subinventory_transfer_locator_select_query">查询</string>
    <string name="isp_wip_query_title">ISP 工单对照关系</string>
    <string name="isp_wip_query_wip_required_or_produce">生产方或需求方工单</string>
    <string name="isp_wip_query_produce_organization">生产组织</string>
    <string name="isp_wip_query_produce_wip">生产工单</string>
    <string name="isp_wip_query_produce_project_no">项目号</string>
    <string name="isp_wip_query_so">SO</string>
    <string name="isp_wip_query_required_organization">需求组织</string>
    <string name="isp_wip_query_required_wip">需求工单</string>
    <string name="isp_wip_query_required_project_no">项目号</string>
    <string name="isp_wip_query_pr">PR</string>
    <string name="isp_wip_query">查询</string>
</resources>