<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cyan900"
        android:text="@string/isp_wip_query_title"
        android:textSize="20sp"
        android:textColor="#fff"
        android:padding="16dp"
        />
        <EditText
            style="@style/ISP_Query_Input_Style"
            android:id="@+id/edt_isp_wip_query_wip_required_or_produce"
            android:layout_margin="8dp"
            android:hint="@string/isp_wip_query_wip_required_or_produce"
            />
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:background="@color/cyan800"
            >
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/isp_wip_query_produce_organization"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/isp_wip_query_produce_wip"
                android:textSize="14sp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/isp_wip_query_produce_project_no"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/isp_wip_query_so"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/isp_wip_query_required_organization"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                />
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/isp_wip_query_required_wip"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                />
            <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/isp_wip_query_required_project_no"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            />
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/isp_wip_query_pr"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/lv_isp_wip_query_list"
            android:listSelector="@color/float_transparent"
            />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/cyan800"
            android:text="@string/isp_wip_query"
            android:id="@+id/btn_isp_wip_query_refresh"
            />
    </LinearLayout>
</LinearLayout>
