<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cyan900"
        android:text="@string/isp_wip_issue_subinventory_select_title"
        android:textSize="20sp"
        android:textColor="#fff"
        android:padding="16dp"
        />
    <EditText
        style="@style/ISP_Query_Input_Style"
        android:id="@+id/edt_isp_wip_issue_subinventory_select_subinventory"
        android:hint="@string/isp_wip_issue_subinventory_select_subinventory"
        android:layout_margin="8dp"
        />
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@color/cyan800"
        >
<TextView
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:text="@string/isp_wip_issue_subinventory_select_component"
    android:textSize="16sp"
    android:gravity="center_horizontal"
    android:textColor="@color/white"
    />
        <TextView
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/isp_wip_issue_subinventory_select_component_description"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        />
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/isp_wip_issue_subinventory_select_uom"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/isp_wip_issue_subinventory_select_subinventory"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/isp_wip_issue_subinventory_select_locator"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/isp_wip_issue_subinventory_select_lotno"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            />
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/isp_wip_issue_subinventory_select_transaction_quantity"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <ListView 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/lv_isp_wip_issue_subinventory_select_list"
        android:listSelector="@color/float_transparent"
        />
        </LinearLayout>
    </HorizontalScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/cyan800"
            android:textColor="@color/white"
            android:text="@string/isp_wip_issue_subinventory_select_confirm"
            android:id="@+id/btn_isp_wip_issue_subinventory_select_confirm"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"

            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/cyan800"
            android:text="@string/isp_wip_issue_subinventory_select_query"
            android:id="@+id/btn_isp_wip_issue_subinventory_select_refresh"
            />
    </LinearLayout>
</LinearLayout>
