<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_ori"
     >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_wo_title"
        android:padding="10dp"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comp_title"
        android:textSize="24sp"
        android:textColor="#fff"
        android:layout_centerInParent="true"
        />
    <ImageButton 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/more"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:layout_centerVertical="true"
        android:id="@+id/imb_comp_query"
        />
    </RelativeLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="3dp"
        >
        <LinearLayout 
            style="@style/Wo_Container_Style2"
            >
            <TextView 
                style="@style/Wo_Original_Tag_Style"
                android:layout_gravity="center_vertical"
                android:text="@string/comp_sub_inventory"
                />
            <EditText 
                style="@style/Wo_Input_Style"
                android:id="@+id/edt_comp_sub_inventory"
                android:layout_marginLeft="3dp"
                />
        </LinearLayout>
        <LinearLayout 
            style="@style/Wo_Container_Style2"
            >
            <TextView 
                style="@style/Wo_Original_Tag_Style"
                android:layout_gravity="center_vertical"
                android:text="@string/comp_ori_code"
                />
            <EditText 
                style="@style/Wo_Input_Style"
                android:id="@+id/edt_comp_ori_code"
                android:layout_marginLeft="3dp"
                />
        </LinearLayout>
        <LinearLayout 
            style="@style/Wo_Container_Style2"
            >
            <TextView 
                style="@style/Wo_Original_Tag_Style"
                android:layout_gravity="center_vertical"
                android:text="@string/comp_class_code"
                />
            <TextView 
                style="@style/Wo_Value_Style"
                android:id="@+id/tv_comp_class_code"
                />
        </LinearLayout>
        <LinearLayout 
            style="@style/Wo_Container_Style2"
            >
            <TextView 
                style="@style/Wo_Original_Tag_Style"
                android:layout_gravity="center_vertical"
                android:text="@string/comp_start_time"
                />
            <TextView 
                style="@style/Wo_Value_Style"
                android:id="@+id/tv_comp_start_time"
                />
        </LinearLayout>
        <LinearLayout 
            style="@style/Wo_Container_Style2"
            >
            <TextView 
                style="@style/Wo_Original_Tag_Style"
                android:layout_gravity="center_vertical"
                android:text="@string/comp_completion_time"
                />
            <TextView 
                style="@style/Wo_Value_Style"
                android:id="@+id/tv_comp_complete_time"
                />
        </LinearLayout>
        <LinearLayout 
            style="@style/Wo_Container_Style2"
            >
            <TextView 
                style="@style/Wo_Original_Tag_Style"
                android:layout_gravity="center_vertical"
                android:text="@string/comp_assembly"
                />
            <TextView 
                style="@style/Wo_Value_Style"
                android:id="@+id/tv_comp_assembly"
                />
        </LinearLayout>
        <LinearLayout 
            style="@style/Wo_Container_Style2"
            >
            <TextView 
                style="@style/Wo_Original_Tag_Style"
                android:layout_gravity="center_vertical"
                android:text="@string/comp_assembly_name"
                />
            <TextView 
                style="@style/Wo_Value_Style"
                android:id="@+id/tv_comp_assembly_name"
                />
        </LinearLayout>
        <LinearLayout 
            style="@style/Wo_Container_Style2"
            >
            <TextView 
                style="@style/Wo_Original_Tag_Style"
                android:layout_gravity="center_vertical"
                android:text="@string/comp_completed_qty"
                />
            <TextView 
                style="@style/Wo_Value_Style"
                android:id="@+id/tv_comp_completed_qty"
                />
        </LinearLayout>
        <LinearLayout 
            style="@style/Wo_Container_Style2"
            >
            <TextView 
                style="@style/Wo_Original_Tag_Style"
                android:layout_gravity="center_vertical"
                android:text="@string/comp_rest_qty"
                />
            <TextView 
                style="@style/Wo_Value_Style"
                android:id="@+id/tv_comp_rest_qty"
                />
        </LinearLayout>
        <LinearLayout 
            style="@style/Wo_Container_Style2"
            >
            <TextView 
                style="@style/Wo_Original_Tag_Style"
                android:layout_gravity="center_vertical"
                android:text="@string/comp_remark"
                />
            <TextView 
                style="@style/Wo_Value_Style"
                android:id="@+id/tv_comp_remark"
                />
        </LinearLayout>
        <LinearLayout 
            style="@style/Wo_Container_Style2"
            >
            <TextView 
                style="@style/Wo_Original_Tag_Style"
                android:layout_gravity="center_vertical"
                android:text="@string/comp_board_code"
                />
            <TextView 
                style="@style/Wo_Value_Style"
                android:id="@+id/tv_comp_board_code"
                />
        </LinearLayout>
        <LinearLayout 
            style="@style/Wo_Container_Style2"
            >
            <TextView 
                style="@style/Wo_Original_Tag_Style"
                android:layout_gravity="center_vertical"
                android:text="@string/comp_warehouse_location"
                />
            <TextView 
                style="@style/Wo_Value_Style"
                android:id="@+id/tv_comp_warehouse_location"
                />
        </LinearLayout>
        <LinearLayout 
            style="@style/Wo_Container_Style2"
            >
            <TextView 
                style="@style/Wo_Original_Tag_Style"
                android:layout_gravity="center_vertical"
                android:text="@string/comp_completion_qty"
                />
            <EditText 
                style="@style/Wo_Input_Style"
                android:id="@+id/edt_comp_completion_qty"
                android:layout_marginLeft="3dp"
                />
        </LinearLayout>
    <View 
        android:layout_width="match_parent"
        android:background="#fff"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        />
    </LinearLayout>
    <Button 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_query_style"
            android:textColor="@drawable/btn_query_textcolor_style"
            android:id="@+id/btn_comp_submit"
            android:text="提交"
            android:layout_margin="6dp"
            />
</LinearLayout>
