<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/bg_ori"
    >
    <LinearLayout
        style="@style/Wo_Container_Normal"
        >
        <TextView
            style="@style/Wo_Original_Tag_Style"
            android:layout_gravity="center_vertical"
            android:text="@string/intraware_aar_date"
            />
        <TextView
            style="@style/Wo_Value_Style"
            android:id="@+id/tv_intraware_aar_date"
            android:layout_marginLeft="4dp"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Wo_Container_Normal"
        >
        <TextView
            style="@style/Wo_Original_Tag_Style"
            android:layout_gravity="center_vertical"
            android:text="@string/intraware_aar_trans_type"
            />
        <TextView
            style="@style/Wo_Value_Style"
            android:id="@+id/tv_intraware_aar_trans_type"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Wo_Container_Normal"
        >
        <TextView
            style="@style/Wo_Original_Tag_Style"
            android:layout_gravity="center_vertical"
            android:text="@string/intraware_aar_ori_type"
            />
        <TextView
            style="@style/Wo_Value_Style"
            android:id="@+id/tv_intraware_aar_ori_type"
            />
    </LinearLayout>
    <LinearLayout
        style="@style/Wo_Container_Normal"
        >
        <TextView
            style="@style/Wo_Original_Tag_Style"
            android:layout_gravity="center_vertical"
            android:text="@string/intraware_aar_trans_ori"
            />
        <TextView
            style="@style/Wo_Value_Style"
            android:id="@+id/tv_intraware_aar_trans_ori"
            />
    </LinearLayout>

    <LinearLayout
        style="@style/Wo_Container_Normal"
        >
        <TextView
            style="@style/Wo_Original_Tag_Style"
            android:layout_gravity="center_vertical"
            android:text="@string/intraware_aar_reason"
            />
        <TextView
            style="@style/Wo_Value_Style"
            android:id="@+id/tv_intraware_aar_reason"
            />
    </LinearLayout>
</LinearLayout>