<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cyan900"
        android:text="@string/isp_subinventory_transfer_locator_select_title"
        android:textSize="20sp"
        android:textColor="#fff"
        android:padding="16dp"
        />
    <EditText
        style="@style/ISP_Query_Input_Style"
        android:id="@+id/edt_isp_subinventory_transfer_locator_select_name"
        android:hint="@string/isp_subinventory_transfer_locator_select_name"
        android:layout_margin="8dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cyan800"
        android:padding="8dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/isp_subinventory_transfer_locator_select_name"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            />
        <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/isp_subinventory_transfer_locator_select_description"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        />
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/lv_isp_subinventory_transfer_locator_select_list"
        android:listSelector="@color/float_transparent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@color/cyan800"
            android:textColor="@color/white"
            android:text="@string/isp_subinventory_transfer_locator_select_confirm"
            android:id="@+id/btn_isp_subinventory_transfer_locator_select_confirm"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@color/cyan800"
            android:text="@string/isp_subinventory_transfer_locator_select_query"
            android:id="@+id/btn_isp_subinventory_transfer_locator_select_refresh"
            />
    </LinearLayout>
</LinearLayout>
